# CS736-benchmark

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: main.tex
docs/sections/: conclusion.tex  eval.tex  pipe.tex  resolution.tex  systemcall.tex  tcp.tex  udp.tex
log/: pipe_latency  tcp_remote_lat  tcp_remote_latency  tcp_remote_tput  tcpip_local_lat  tcpip_local_tput  udp_remote_tput  ver1
src/: clock_res.rs  clockprecision.rs  clockprecision_libc.rs  clockprecision_rdtscp.rs  kernelcall.rs  latency.rs  lib.rs  measure.rs  pipe.rs  scratch  scratch.rs  throughput.rs
src/tcpip/: client.rs  server.rs
src/udp/: client.rs  measure.rs  server.rs
