[package]
name = "measurement"
version = "0.1.0"
authors = ["noirgif <nomaru@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[[bin]]
name = "latency"
path = "src/latency.rs"

[[bin]]
name = "kernelcall"
path = "src/kernelcall.rs"

[[bin]]
name = "throughput"
path = "src/throughput.rs"